                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 10-03-2006 fixed: Incorrect labels shown at start of filemanager copy, move and delete.
 - 10-03-2006 fixed: First few thumbs sometimes wouldn't update in My Pictures
 - 10-03-2006 changed: Visualisation screensaver doesn't reset on button press unless a dialog is active.
 - 10-03-2006 changed: GUI Messages are sent to the first visible control that matches the id, and only sent to invisible controls if the visible one does not handle it.
 - 09-03-2006 fixed: [ 1446065 ] No Media can be played after stopping wma file.
 - 09-03-2006 added: Dynamic range compensation to videos.  Replaces the old Volume Amplification which only worked with mplayer.  TRANSLATORS: Definition of string id 290 has changed.
 - 09-03-2006 fixed: Controlgroup default control saving wasn't working correctly.
 - 09-03-2006 fixed: Crash in Settings->Appearance if Font.xml wasn't of the usual form.
 - 08-03-2006 fixed: trying to access a nonexisting smb computer showed authentication dialog instead of invalid computer name.
 - 08-03-2006 added: System.DVDLabel info label.  Shows the title of the dvd.
 - 08-03-2006 added: Smart Playlists in My Music.  Only loadable from a file (no GUI setup of smart playlists)
 - 08-03-2006 fixed: CUtil::GetFileName() was not using the correct directory separators.
 - 08-03-2006 changed: Video playlist now shows label, rather than filename.
 - 08-03-2006 added: Filtering of Party mode via a PartyMode.xml in system/ folder.
 - 07-03-2006 changed: always="true" now only effects the default control saving - all other control saving still occurs (list positions, control group settings etc.)